--- a/file/war3map.w3u.ini
+++ b/file/war3map.w3u.ini
@@ -1077,17 +1077,17 @@ AGI = 500000
 -- 英雄 - 每等级提升敏捷
 AGIplus = 250000.0000
 -- 英雄 - 初始智力
-INT = 1000000
+INT = 2000000
 -- 英雄 - 每等级提升智力
-INTplus = 375000.0000
+INTplus = 750000.0000
 -- 名字
 Name = "|cFFFF6699千年孤魂|r"
 -- 称谓
 Propernames = "|cffffcc00弑魂|r"
 -- 英雄 - 初始力量
-STR = 7500000
+STR = 15000000
 -- 英雄 - 每等级提升力量
-STRplus = 2500000.0000
+STRplus = 500000.0000
 -- 普通
 abilList = "A07B,A0B3,Amgl"
 -- 主动攻击范围
@@ -15470,8 +15470,6 @@ castbsw = 0.1000
 castpt = 0.1000
 -- 碰撞体积
 collision = 0.0000
--- 攻击 1 - 攻击间隔
-cool1 = 2.000
 -- 攻击 1 - 基础伤害
 dmgplus1 = 1
 -- 模型文件
@@ -15828,6 +15826,45 @@ weapType1 = ""
 -- 允许攻击模式
 weapsOn = 1
 
+[hh00]
+_parent = "hpea"
+-- 可建造建筑
+Builds = ""
+-- 名字 - 编辑器后缀
+EditorSuffix = "空间封冻之刺"
+-- 生命最大值
+HP = 1
+-- 名字
+Name = ""
+-- 普通
+abilList = "Aloc,Avul"
+-- 碰撞体积
+collision = 0.0000
+-- 模型文件
+file = "Abilities\\Spells\\Undead\\Impale\\ImpaleHitTarget.mdl"
+-- 占用人口
+fused = 0
+-- 模型缩放
+modelScale = 3.0000
+-- 视野范围(夜晚)
+nsight = 100
+-- 单位附加值
+points = 123
+-- 生命回复
+regenHP = 0.0000
+-- 视野范围(白天)
+sight = 100
+-- 基础速度
+spd = 0
+-- 单位类别
+type = ""
+-- 阴影图像(单位)
+unitShadow = ""
+-- 使用科技
+upgrades = ""
+-- 允许攻击模式
+weapsOn = 0
+
 [hh02]
 _parent = "hpea"
 -- 图标 - 游戏界面
@@ -15907,43 +15944,6 @@ _parent = "hpea"
 Builds = ""
 -- 名字 - 编辑器后缀
 EditorSuffix = "泣罗刹后续伤害"
--- 生命最大值
-HP = 1
--- 名字
-Name = ""
--- 普通
-abilList = "Aloc,Avul,AQ00"
--- 碰撞体积
-collision = 0.0000
--- 模型文件
-file = ".mdl"
--- 占用人口
-fused = 0
--- 视野范围(夜晚)
-nsight = 100
--- 单位附加值
-points = 123
--- 生命回复
-regenHP = 0.0000
--- 视野范围(白天)
-sight = 100
--- 基础速度
-spd = 0
--- 单位类别
-type = ""
--- 阴影图像(单位)
-unitShadow = ""
--- 使用科技
-upgrades = ""
--- 允许攻击模式
-weapsOn = 0
-
-[hh00]
-_parent = "hpea"
--- 可建造建筑
-Builds = ""
--- 名字 - 编辑器后缀
-EditorSuffix = "空间封冻之刺"
 -- 生命最大值
 HP = 1
 -- 名字
@@ -16983,7 +16983,7 @@ Tip = "雇佣兵1号"
 -- 提示工具 - 扩展
 Ubertip = "能在初级练级场中帮你自动刷经验的雇佣兵，让你不在练级场时也能享受到刷经验的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要2500守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
 -- 普通
-abilList = "Avul,A0GZ"
+abilList = "Avul,A0GZ,A048"
 -- 攻击 1 - 攻击类型
 atkType1 = "pierce"
 -- 黄金奖励 - 骰子数量
@@ -17000,27 +17000,31 @@ cool1 = 1.0000
 def = 20.0000
 -- 防御升级奖励
 defUp = 10.0000
--- 攻击 1 - 伤害升级奖励
-dmgUp1 = 100
 -- 攻击 1 - 基础伤害
-dmgplus1 = 500
+dmgplus1 = 2
 -- 占用人口
 fused = 0
--- 单位附加值
-points = 40
+-- 黄金消耗
+goldcost = 1
+-- 攻击 1 - 攻击范围
+rangeN1 = 300
 -- 攻击 1 - 伤害骰子面数
-sides1 = 200
+sides1 = 1
 -- 基础速度
 spd = 522
+-- 最大库存量
+stockMax = 1
+-- 雇佣时间间隔
+stockRegen = 1
 -- 攻击 1 - 目标允许
 targs1 = "ground,structure,debris,air,item,ward"
 -- 使用科技
-upgrades = "R004,R003,R000,R001"
+upgrades = ""
 
 [uG02]
 _parent = "hrif"
 -- 生命最大值
-HP = 360000
+HP = 1
 -- 名字
 Name = "雇佣兵2号"
 -- 需求
@@ -17030,7 +17034,7 @@ Tip = "雇佣兵2号"
 -- 提示工具 - 扩展
 Ubertip = "能在中级练级场中帮你自动刷经验的雇佣兵，让你不在练级场时也能享受到刷经验的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要5000守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
 -- 普通
-abilList = "Avul,A0GZ"
+abilList = "Avul,A0GZ,A048"
 -- 黄金奖励 - 基础值
 bountyplus = 1
 -- 攻击 1 - 攻击间隔
@@ -17039,33 +17043,39 @@ cool1 = 1.0000
 def = 60.0000
 -- 防御升级奖励
 defUp = 12.0000
--- 攻击 1 - 伤害升级奖励
-dmgUp1 = 3000
+-- 攻击 1 - 伤害骰子数量
+dice1 = 1
 -- 攻击 1 - 基础伤害
-dmgplus1 = 7000
+dmgplus1 = 2
 -- 占用人口
 fused = 0
+-- 黄金消耗
+goldcost = 1
 -- 等级
 level = 40
--- 魔法最大值
-manaN = 200
+-- 木材消耗
+lumbercost = 0
 -- 攻击 1 - 攻击范围
-rangeN1 = 90
+rangeN1 = 300
 -- 生命回复
 regenHP = 0.0000
--- 魔法回复
-regenMana = 1.5000
+-- 攻击 1 - 伤害骰子面数
+sides1 = 1
 -- 基础速度
 spd = 522
+-- 最大库存量
+stockMax = 1
+-- 雇佣时间间隔
+stockRegen = 1
 -- 使用科技
-upgrades = "R004,R003,R000,R001"
+upgrades = ""
 
 [uG03]
 _parent = "earc"
 -- 按钮位置(Y)
 "Buttonpos:2" = 1
 -- 生命最大值
-HP = 270000
+HP = 1
 -- 名字
 Name = "雇佣兵3号"
 -- 提示工具 - 基础
@@ -17073,43 +17083,43 @@ Tip = "雇佣兵3号"
 -- 提示工具 - 扩展
 Ubertip = "能在初级刷钱场中帮你自动刷钱的雇佣兵，让你不在刷钱场时也能享受到刷钱的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要8000守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
 -- 普通
-abilList = "Avul,A0GZ"
+abilList = "Avul,A0GZ,A048"
 -- 主动攻击范围
 acquire = 300.0000
 -- 默认主动技能
-auto = "Anhe"
+auto = ""
 -- 黄金奖励 - 基础值
 bountyplus = 1
 -- 基础护甲
 def = 9.0000
 -- 防御升级奖励
 defUp = 8.0000
--- 攻击 1 - 伤害升级奖励
-dmgUp1 = 2000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 4000
+dmgplus1 = 2
 -- 占用人口
 fused = 0
+-- 黄金消耗
+goldcost = 1
 -- 等级
 level = 30
--- 魔法最大值
-manaN = 100
--- 单位附加值
-points = 80
+-- 木材消耗
+lumbercost = 0
 -- 攻击 1 - 攻击范围
 rangeN1 = 300
 -- 生命回复
 regenHP = 0.0000
--- 魔法回复
-regenMana = 1.0000
 -- 生命回复类型
 regenType = "always"
 -- 攻击 1 - 伤害骰子面数
-sides1 = 10000
+sides1 = 1
 -- 基础速度
 spd = 522
+-- 最大库存量
+stockMax = 1
+-- 雇佣时间间隔
+stockRegen = 1
 -- 使用科技
-upgrades = "R004,R003,R000,R001"
+upgrades = ""
 
 [uG04]
 _parent = "nchr"
@@ -17118,7 +17128,7 @@ _parent = "nchr"
 -- 按钮位置(Y)
 "Buttonpos:2" = 1
 -- 生命最大值
-HP = 4000000
+HP = 1
 -- 名字
 Name = "雇佣兵4号"
 -- 提示工具 - 基础
@@ -17126,7 +17136,7 @@ Tip = "雇佣兵4号"
 -- 提示工具 - 扩展
 Ubertip = "能在中级刷钱场中帮你自动刷钱的雇佣兵，让你不在刷钱场时也能享受到刷钱的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要15000守家积分，守家积分在右上角多面板数查看。|r|n|cff98b4d0单人模式无法购买。|r"
 -- 普通
-abilList = "Avul,A0GZ"
+abilList = "Avul,A0GZ,A048"
 -- 黄金奖励 - 骰子数量
 bountydice = 0
 -- 黄金奖励 - 基础值
@@ -17139,28 +17149,32 @@ cool1 = 1.0000
 def = 200.0000
 -- 防御升级奖励
 defUp = 25.0000
--- 攻击 1 - 伤害升级奖励
-dmgUp1 = 100000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 1000000
+dmgplus1 = 2
 -- 占用人口
 fused = 0
+-- 黄金消耗
+goldcost = 1
 -- 等级
 level = 60
--- 魔法最大值
-manaN = 500
--- 单位附加值
-points = 130
+-- 木材消耗
+lumbercost = 0
+-- 攻击 1 - 攻击范围
+rangeN1 = 300
 -- 生命回复
 regenHP = 0.0000
--- 魔法回复
-regenMana = 1.0000
+-- 攻击 1 - 伤害骰子面数
+sides1 = 1
 -- 基础速度
 spd = 522
+-- 最大库存量
+stockMax = 1
+-- 雇佣时间间隔
+stockRegen = 1
 -- 攻击 1 - 目标允许
 targs1 = "debris,ground,structure,air,ward,item"
 -- 使用科技
-upgrades = "R004,R003,R000,R001"
+upgrades = ""
 
 [uG05]
 _parent = "hmpr"
@@ -17169,7 +17183,7 @@ _parent = "hmpr"
 -- 按钮位置(Y)
 "Buttonpos:2" = 2
 -- 生命最大值
-HP = 30000
+HP = 1
 -- 名字
 Name = "雇佣兵5号"
 -- 提示工具 - 基础
@@ -17177,9 +17191,11 @@ Tip = "雇佣兵5号"
 -- 提示工具 - 扩展
 Ubertip = "能在高级经验场中帮你自动刷经验的雇佣兵，让你不在经验场时也能享受到刷经验的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要成为永久赞助且18波后才能购买|r"
 -- 普通
-abilList = "Avul,A0GZ"
+abilList = "Avul,A0GZ,A048"
 -- 攻击 1 - 攻击类型
 atkType1 = "pierce"
+-- 默认主动技能
+auto = ""
 -- 黄金奖励 - 骰子数量
 bountydice = 0
 -- 黄金奖励 - 基础值
@@ -17194,26 +17210,32 @@ cool1 = 1.0000
 def = 20.0000
 -- 防御升级奖励
 defUp = 4.0000
--- 攻击 1 - 伤害升级奖励
-dmgUp1 = 100
 -- 攻击 1 - 基础伤害
-dmgplus1 = 200
+dmgplus1 = 2
 -- 占用人口
 fused = 0
+-- 黄金消耗
+goldcost = 1
+-- 木材消耗
+lumbercost = 0
 -- 魔法初始数量
-mana0 = 1000
+mana0 = 0
 -- 魔法最大值
-manaN = 400
--- 单位附加值
-points = 40
+manaN = 0
+-- 攻击 1 - 攻击范围
+rangeN1 = 300
 -- 生命回复
 regenHP = 0.0000
 -- 魔法回复
-regenMana = 4.0000
+regenMana = 0.0000
 -- 基础速度
 spd = 522
+-- 最大库存量
+stockMax = 1
+-- 雇佣时间间隔
+stockRegen = 1
 -- 使用科技
-upgrades = "R004,R003,R000,R001"
+upgrades = ""
 
 [uG06]
 _parent = "esen"
@@ -17222,7 +17244,7 @@ _parent = "esen"
 -- 攻击 1 - 全伤害范围
 Farea1 = 0
 -- 生命最大值
-HP = 600000
+HP = 1
 -- 名字
 Name = "雇佣兵6号"
 -- 需求
@@ -17232,7 +17254,7 @@ Tip = "雇佣兵6号"
 -- 提示工具 - 扩展
 Ubertip = "能在高级刷钱场中帮你自动刷钱的雇佣兵，让你不在刷钱场时也能享受到刷钱的快感，同时也能帮你吸收鬼戒升级所需的灵魂数。|n|n|cffffcc00需要成为永久赞助且22波后才能购买|r"
 -- 普通
-abilList = "Avul,A0GZ"
+abilList = "Avul,A0GZ,A048"
 -- 黄金奖励 - 基础值
 bountyplus = 1
 -- 攻击 1 - 攻击间隔
@@ -17241,36 +17263,36 @@ cool1 = 1.0000
 def = 300.0000
 -- 防御升级奖励
 defUp = 5.0000
--- 攻击 1 - 伤害升级奖励
-dmgUp1 = 2000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 4000
+dmgplus1 = 2
 -- 占用人口
 fused = 0
+-- 黄金消耗
+goldcost = 1
 -- 等级
 level = 30
--- 魔法最大值
-manaN = 200
--- 单位附加值
-points = 80
+-- 木材消耗
+lumbercost = 0
 -- 攻击 1 - 攻击范围
 rangeN1 = 300
 -- 生命回复
 regenHP = 0.0000
--- 魔法回复
-regenMana = 10.0000
 -- 生命回复类型
 regenType = "always"
 -- 攻击 1 - 伤害骰子面数
-sides1 = 10000
+sides1 = 1
 -- 基础速度
 spd = 522
 -- 攻击 1 - 范围影响目标
 splashTargs1 = ""
+-- 最大库存量
+stockMax = 1
+-- 雇佣时间间隔
+stockRegen = 1
 -- 攻击 1 -最大目标数
 targCount1 = 0
 -- 使用科技
-upgrades = "R004,R003,R000,R001"
+upgrades = ""
 -- 攻击 1 - 武器类型
 weapTp1 = "missile"
 
