--- a/file/war3map.w3u.ini
+++ b/file/war3map.w3u.ini
@@ -522,13 +522,15 @@ abilList = "AInv,A0B9,A0F2"
 -- 攻击 1 - 攻击类型
 atkType1 = "hero"
 -- 攻击 1 - 动画回复点
-backSw1 = 0.4400
+backSw1 = 0.4000
 -- 攻击 1 - 攻击间隔
 cool1 = 0.0100
 -- 攻击 1 - 伤害骰子数量
 dice1 = 1
+-- 攻击 1 - 基础伤害
+dmgplus1 = 0
 -- 攻击 1 - 动画伤害点
-dmgpt1 = 0.5000
+dmgpt1 = 0.5500
 -- 英雄
 heroAbilList = "A04H,A0F6,A0F7,A0F8,A0F9"
 -- 魔法初始数量
@@ -730,7 +732,7 @@ _parent = "Hlgr"
 -- 英雄 - 初始敏捷
 AGI = 100000
 -- 生命最大值
-HP = 150000000
+HP = 180000000
 -- 英雄 - 初始智力
 INT = 500000
 -- 名字
@@ -740,9 +742,9 @@ Primary = "INT"
 -- 称谓
 Propernames = "|cFF3333FF仙丶半入魔|r"
 -- 英雄 - 初始力量
-STR = 75000000
+STR = 40000000
 -- 普通
-abilList = "AInv,A07B,A04E,A09V"
+abilList = "AInv,A07B,A04E,A09V,Adtg"
 -- 主动攻击范围
 acquire = 3000.0000
 -- 攻击 1 - 攻击类型
@@ -752,7 +754,7 @@ cool1 = 0.0100
 -- 基础护甲
 def = 7500.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 10000000
+dmgplus1 = 15000000
 -- 攻击 1 - 动画伤害点
 dmgpt1 = 0.5000
 -- 模型文件
@@ -901,7 +903,7 @@ Propernames = "|cFF3333FF人丶无影杀手|r"
 -- 英雄 - 初始力量
 STR = 20000000
 -- 普通
-abilList = "AInv,A0EY,A07B,A04E,AL05"
+abilList = "AInv,A0EY,A07B,A04E,AL05,Adtg,A036"
 -- 主动攻击范围
 acquire = 3000.0000
 -- 攻击 1 - 攻击间隔
@@ -909,7 +911,7 @@ cool1 = 0.0100
 -- 基础护甲
 def = 5000.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 600000000
+dmgplus1 = 750000000
 -- 攻击 1 - 动画伤害点
 dmgpt1 = 0.5000
 -- 模型文件
@@ -1187,8 +1189,6 @@ sides1 = 1
 spd = 320
 -- 攻击 1 - 目标允许
 targs1 = "ground,structure,debris,air,item,ward,wall"
--- 攻击 1 - 武器声音
-weapType1 = "MetalMediumSlice"
 
 [Nbbc]
 _parent = "Nbbc"
@@ -1270,7 +1270,7 @@ Requirescount = 0
 -- 英雄 - 初始力量
 STR = 1
 -- 普通
-abilList = "A04E,A09V,A09W"
+abilList = "A04E,A09V,A09W,Adtg"
 -- 主动攻击范围
 acquire = 6000.0000
 -- 攻击 1 - 攻击类型
@@ -1292,7 +1292,7 @@ def = 1000.0000
 -- 攻击 1 - 伤害骰子数量
 dice1 = 1
 -- 攻击 1 - 基础伤害
-dmgplus1 = 5000000
+dmgplus1 = 6000000
 -- 攻击 1 - 动画伤害点
 dmgpt1 = 0.1000
 -- 模型文件
@@ -1511,7 +1511,7 @@ STR = 1000000000
 -- 英雄 - 每等级提升力量
 STRplus = 0.0000
 -- 普通
-abilList = "A0AG,Apig,Adts,A09V,A0P1"
+abilList = "A0AG,Apig,Adts,A09V,A0P1,Adtg,A05P"
 -- 主动攻击范围
 acquire = 600.0000
 -- 攻击 1 - 攻击类型
@@ -1590,7 +1590,7 @@ STR = 1
 -- 英雄 - 每等级提升力量
 STRplus = 1.0000
 -- 普通
-abilList = "AInv,A0BV,Adts,ANrf,A04E,ANdo,A09V,A0P1"
+abilList = "AInv,A0BV,Adts,ANrf,A04E,ANdo,A09V,A0P1,Adtg"
 -- 主动攻击范围
 acquire = 900.0000
 -- 攻击 1 - 攻击类型
@@ -1673,7 +1673,7 @@ Qfact1 = 0.9800
 -- 英雄 - 初始力量
 STR = 1
 -- 普通
-abilList = "A04E,A09V,A09W"
+abilList = "A04E,A09V,A09W,Adtg"
 -- 主动攻击范围
 acquire = 6000.0000
 -- 攻击 1 - 攻击类型
@@ -1693,7 +1693,7 @@ def = 1000.0000
 -- 攻击 1 - 伤害骰子数量
 dice1 = 1
 -- 攻击 1 - 基础伤害
-dmgplus1 = 5000000
+dmgplus1 = 6000000
 -- 攻击 1 - 动画伤害点
 dmgpt1 = 0.1000
 -- 模型文件
@@ -1837,7 +1837,7 @@ STR = 500000000
 -- 英雄 - 每等级提升力量
 STRplus = 0.0000
 -- 普通
-abilList = "A0AG,AHav,A0DZ,Adts,A09V,A0P1"
+abilList = "A0AG,AHav,A0DZ,Adts,A09V,A0P1,Adtg"
 -- 颜色值(蓝)
 blue = 0
 -- 黄金奖励 - 基础值
@@ -2275,7 +2275,7 @@ STR = 500000000
 -- 英雄 - 每等级提升力量
 STRplus = 0.0000
 -- 普通
-abilList = "A0AG,AHav,Adts,A0E0,A09V,A0P1"
+abilList = "A0AG,AHav,Adts,A0E0,A09V,A0P1,Adtg"
 -- 攻击 1 - 攻击类型
 atkType1 = "chaos"
 -- 颜色值(蓝)
@@ -2450,7 +2450,7 @@ STR = 1
 -- 英雄 - 每等级提升力量
 STRplus = 1.0000
 -- 普通
-abilList = "AInv,A0BV,Adts,AUcs,ACsl,A04E,A09V,A0P1"
+abilList = "AInv,A0BV,Adts,AUcs,ACsl,A04E,A09V,A0P1,Adtg"
 -- 主动攻击范围
 acquire = 900.0000
 -- 攻击 1 - 攻击类型
@@ -2547,7 +2547,7 @@ STR = 100000000
 -- 英雄 - 每等级提升力量
 STRplus = 1.0000
 -- 普通
-abilList = "A09V,AInv,A0BV,Adts,A0BW,A04E,A0DC,A0P1"
+abilList = "A09V,AInv,A0BV,Adts,A0BW,A04E,A0DC,A0P1,Adtg"
 -- 主动攻击范围
 acquire = 900.0000
 -- 黄金奖励 - 骰子数量
@@ -3342,17 +3342,6 @@ uberSplat = ""
 -- 使用科技
 upgrades = "R00O"
 
-[hbar]
-_parent = "hbar"
--- 生命最大值
-HP = 500000
--- 名字
-Name = "毁灭者营地"
--- 基础护甲
-def = 50.0000
--- 单位附加值
-points = 2500
-
 [hdhw]
 _parent = "hdhw"
 -- 生命最大值
@@ -3425,7 +3414,7 @@ HP = 40000
 -- 名字
 Name = "Lv4 致命一击"
 -- 普通
-abilList = "A03T,Aihn,A06K"
+abilList = "A03T,A06K"
 -- 攻击 1 - 攻击类型
 atkType1 = "pierce"
 -- 黄金奖励 - 骰子数量
@@ -3549,37 +3538,6 @@ upgrades = "R004,R003,R000,R001"
 weapTp1 = "missile"
 -- 允许攻击模式
 weapsOn = 1
-
-[hgtw]
-_parent = "hgtw"
--- 生命最大值
-HP = 50000
--- 名字
-Name = "|cFF0041FF箭塔|r"
--- 需求
-Requires = ""
--- 普通
-abilList = ""
--- 主动攻击范围
-acquire = 1800.0000
--- 攻击 1 - 攻击类型
-atkType1 = "chaos"
--- 黄金奖励 - 基础值
-bountyplus = 300
--- 基础护甲
-def = 20.0000
--- 防御升级奖励
-defUp = 0.0000
--- 攻击 1 - 伤害升级奖励
-dmgUp1 = 2
--- 攻击 1 - 基础伤害
-dmgplus1 = 1500
--- 放置要求
-preventPlace = ""
--- 攻击 1 - 攻击范围
-rangeN1 = 6000
--- 使用科技
-upgrades = ""
 
 [hgyr]
 _parent = "hgyr"
@@ -5008,7 +4966,7 @@ manaN = 450
 -- 单位附加值
 points = 250
 -- 生命回复
-regenHP = 0.0000
+regenHP = 250000.0000
 -- 魔法回复
 regenMana = 4.5000
 -- 基础速度
@@ -5051,7 +5009,7 @@ points = 500
 -- 攻击 1 - 攻击范围
 rangeN1 = 500
 -- 生命回复
-regenHP = 60000.0000
+regenHP = 300000.0000
 -- 魔法回复
 regenMana = 6.0000
 -- 基础速度
@@ -5271,13 +5229,13 @@ HP = 20000
 -- 名字
 Name = "神界冰封之塔"
 -- 售出物品
-Sellitems = "I06E,I06K"
+Sellitems = "I06E"
 -- 普通
-abilList = "Aneu,Apit,A05R"
+abilList = "Aneu,Apit"
 -- 主动攻击范围
 acquire = 900.0000
 -- 默认主动技能
-auto = "A05R"
+auto = ""
 -- 碰撞体积
 collision = 0.0000
 -- 基础护甲
@@ -5287,9 +5245,9 @@ defUp = 20.0000
 -- 攻击 1 - 伤害骰子数量
 dice1 = 1
 -- 攻击 1 - 伤害升级奖励
-dmgUp1 = 25000
+dmgUp1 = 50000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 450
+dmgplus1 = 1000
 -- 修理黄金消耗
 goldRep = 0
 -- 是一个建筑
@@ -5432,7 +5390,7 @@ points = 2000
 -- 攻击 1 - 攻击范围
 rangeN1 = 500
 -- 生命回复
-regenHP = 2000000.0000
+regenHP = 10000000.0000
 -- 魔法回复
 regenMana = 40.0000
 -- 攻击 1 - 目标允许
@@ -5496,9 +5454,9 @@ HP = 20000
 -- 名字
 Name = "仙界能量之塔"
 -- 售出物品
-Sellitems = "I06H,I04Q"
+Sellitems = "I06H"
 -- 普通
-abilList = "A036,Aneu,Apit"
+abilList = "Aneu,Apit"
 -- 主动攻击范围
 acquire = 900.0000
 -- 碰撞体积
@@ -5510,9 +5468,9 @@ defUp = 20.0000
 -- 攻击 1 - 伤害骰子数量
 dice1 = 1
 -- 攻击 1 - 伤害升级奖励
-dmgUp1 = 25000
+dmgUp1 = 50000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 450
+dmgplus1 = 1000
 -- 修理黄金消耗
 goldRep = 0
 -- 是一个建筑
@@ -5644,9 +5602,9 @@ HP = 20000
 -- 名字
 Name = "妖界火焰之塔"
 -- 售出物品
-Sellitems = "I06G,I06J"
+Sellitems = "I06G"
 -- 普通
-abilList = "A05P,Aneu,Apit"
+abilList = "Aneu,Apit"
 -- 主动攻击范围
 acquire = 900.0000
 -- 碰撞体积
@@ -5658,9 +5616,9 @@ defUp = 20.0000
 -- 攻击 1 - 伤害骰子数量
 dice1 = 1
 -- 攻击 1 - 伤害升级奖励
-dmgUp1 = 25000
+dmgUp1 = 50000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 450
+dmgplus1 = 1000
 -- 修理黄金消耗
 goldRep = 0
 -- 是一个建筑
@@ -5949,7 +5907,7 @@ manaN = 2000
 -- 单位附加值
 points = 5000
 -- 生命回复
-regenHP = 0.0000
+regenHP = 4000000.0000
 -- 魔法回复
 regenMana = 20.0000
 -- 攻击 1 - 伤害骰子面数
@@ -5994,7 +5952,7 @@ manaN = 3000
 -- 单位附加值
 points = 10000
 -- 生命回复
-regenHP = 0.0000
+regenHP = 5000000.0000
 -- 魔法回复
 regenMana = 30.0000
 -- 攻击 1 - 伤害骰子面数
@@ -6154,7 +6112,7 @@ manaN = 3000
 -- 单位附加值
 points = 1000
 -- 生命回复
-regenHP = 1500000.0000
+regenHP = 7500000.0000
 -- 魔法回复
 regenMana = 30.0000
 -- 使用科技
@@ -6316,7 +6274,7 @@ cool1 = 1.0000
 -- 基础护甲
 def = 3000.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 400000000
+dmgplus1 = 800000000
 -- 占用人口
 fused = 0
 -- 木材奖励 - 基础值
@@ -6363,7 +6321,7 @@ cool1 = 0.0100
 -- 基础护甲
 def = 8000.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 10000000
+dmgplus1 = 20000000
 -- 攻击 1 - 动画伤害点
 dmgpt1 = 0.3000
 -- 占用人口
@@ -8339,13 +8297,13 @@ cool1 = 5.0000
 -- 基础护甲
 def = 4000.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 20000000
+dmgplus1 = 1000000000
 -- 攻击 1 - 动画伤害点
 dmgpt1 = 0.3300
 -- 占用人口
 fused = 0
 -- 等级
-level = 145
+level = 451
 -- 木材奖励 - 基础值
 lumberbountyplus = 2000
 -- 魔法初始数量
@@ -9141,7 +9099,7 @@ cool1 = 0.0100
 -- 基础护甲
 def = 7000.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 6000000
+dmgplus1 = 12000000
 -- 攻击 1 - 动画伤害点
 dmgpt1 = 0.2000
 -- 占用人口
@@ -9208,7 +9166,7 @@ def = 2500.0000
 -- 防御升级奖励
 defUp = 0.0000
 -- 攻击 1 - 基础伤害
-dmgplus1 = 300000000
+dmgplus1 = 600000000
 -- 占用人口
 fused = 0
 -- 木材奖励 - 基础值
@@ -12001,7 +11959,7 @@ Qfact1 = 0.9800
 -- 英雄 - 初始力量
 STR = 1
 -- 普通
-abilList = "A04E,A09V,A09W"
+abilList = "A04E,A09V,A09W,Adtg"
 -- 主动攻击范围
 acquire = 2600.0000
 -- 攻击 1 - 攻击类型
@@ -14202,7 +14160,7 @@ moveFloor = 80.0000
 -- 高度
 moveHeight = 80.0000
 -- 类型
-movetp = "hover"
+movetp = ""
 -- 视野范围(夜晚)
 nsight = 300
 -- 单位附加值
@@ -16901,7 +16859,7 @@ green = 0
 -- 模型缩放
 modelScale = 0.8000
 -- 单位附加值
-points = 1
+points = 123
 -- 颜色值(红)
 red = 0
 -- 生命回复
