the last commit :?

--- a/file/war3map.w3t.ini
+++ b/file/war3map.w3t.ini
@@ -3550,7 +3550,7 @@ Name = "|cffff6800妖魄之血|r"
 -- 提示工具 - 基础
 Tip = "|cffff6800妖魄之血|r"
 -- 提示工具 - 扩展
-Ubertip = "妖皇身上抽出的血液，不是用金钱就能衡量的宝物。|n|cffff9900增加10W点生命回复速度|n增加70000属性|n增加55%的技能伤害|n增加15%生命上限|r|n|cffffff00固若金汤 - 周围900范围友军增加4000的防御力。|r"
+Ubertip = "妖皇身上抽出的血液，不是用金钱就能衡量的宝物。|n|cffff9900增加10W点生命回复速度|n增加70000属性|n增加55%的技能伤害|n增加15%生命上限|r|n|cffffff00固若金汤 - 周围900范围友军增加2500的防御力。|r"
 -- 技能
 abilList = "A068,A0BX"
 -- 颜色值(绿)
@@ -13236,6 +13236,31 @@ goldcost = 1
 stockRegen = 10
 
 [IXU7]
+_parent = "tdex"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNMarkOfFire.blp"
+-- 按钮位置(X)
+"Buttonpos:1" = 1
+-- 说明
+Description = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。|n|cffffff00不过我此生未见过|r|cffff00ff虚界至宝琉璃璞玉，|r|cffffff00若你能让我看到，那么我可以给你低价优惠！|r|n|n价格：|n|cffff68008000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）|r"
+-- 热键
+Hotkey = ""
+-- 名字
+Name = "购买|cFFCC3300【神】焱|r - LvMax"
+-- 提示工具 - 基础
+Tip = "购买|cFFCC3300【神】焱|r - LvMax"
+-- 提示工具 - 扩展
+Ubertip = "如果你曾经合成过某半超神器，那么我可以卖这件东西给你，助你于合成超神器一臂之力，走私而来的商品价格很贵哦～。|n|cffffff00不过我此生未见过|r|cffff00ff虚界至宝琉璃璞玉，|r|cffffff00若你能让我看到，那么我可以给你低价优惠！|r|n|n价格：|n|cffff68008000木头（无琉璃璞玉）|n3000木头（有琉璃璞玉）|r"
+-- 技能
+abilList = ""
+-- CD间隔组
+cooldownID = ""
+-- 黄金消耗
+goldcost = 1
+-- 购买时间间隔
+stockRegen = 10
+
+[IVI1]
 _parent = "tdex"
 -- 界面图标
 Art = "ReplaceableTextures\\CommandButtons\\BTNMarkOfFire.blp"
