--- a/轮回2.64/war3map.w3a.ini
+++ b/轮回2.64/war3map.w3a.ini
@@ -26338,7 +26338,7 @@ Targetattach = ""
 -- 提示工具 - 普通
 Tip = "|cffff0000七炎焚狱|r(|cffffcc00D|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffffff00火|r|cff808080水木风|r|cff00ccff|n|n|r对目标及周围召唤巨大火焰造成600范围的|cffff9900（力量+敏捷+智力X2）X（等级的平方根）|r伤害，冷却20s.|cff00ccff|n|n多重施法间隔0.5s.|r"
+Ubertip = "|cffffff00火|r|cff999999水木风|r|cff00ccff|n|n|r对目标及周围召唤巨大火焰造成600范围的|cffff9900（力量+敏捷+智力X2）X（等级的平方根）|r伤害，冷却20s.|cff00ccff|n|n多重施法间隔0.5s.|r"
 -- 英雄技能
 hero = 0
 -- 等级
@@ -26387,7 +26387,7 @@ Targetattach = ""
 -- 提示工具 - 普通
 Tip = "|cff99cc00天古木精|r(|cffffcc00D|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cff999999火水|cffffff00木|cff999999风|r|cff00ccff|n|r|n召唤2个木精为你战斗，木精拥有与英雄一致的攻击防御力生命，拥有分裂与魔法免疫技能，持续180秒，冷却30s。|n|n|cff00ccff多重施法能叠加数值与持续时间。|r"
+Ubertip = "|cff999999火水|cffffff00木|cff999999风|r|cff00ccff|n|r|n召唤2个木精为你战斗，木精拥有与英雄一致的攻击防御力生命，拥有|cffff9900分裂与魔法免疫|r技能，持续180秒，冷却30s。|n|n|cff00ccff多重施法能叠加数值与持续时间。|r"
 -- 英雄技能
 hero = 0
 -- 等级
@@ -26398,7 +26398,7 @@ race = "nightelf"
 [AHH9]
 _parent = "ANcl"
 -- 图标 - 普通
-Art = "ReplaceableTextures\\CommandButtons\\BTNEnt.blp"
+Art = "ReplaceableTextures\\CommandButtons\\BTNTornado.blp"
 -- 按钮位置 - 普通 (X)
 "Buttonpos:1" = 1
 -- 按钮位置 - 普通 (Y)
@@ -26406,9 +26406,9 @@ Art = "ReplaceableTextures\\CommandButtons\\BTNEnt.blp"
 -- 效果 - 施法者
 CasterArt = ""
 -- 魔法施放时间间隔
-Cool = 30.0000
+Cool = 45.0000
 -- 魔法消耗
-Cost = 100
+Cost = 200
 -- 施法持续时间
 DataA = 0.0000
 -- 选项
@@ -26418,15 +26418,15 @@ DataD = 0.0000
 -- 使其他技能无效
 DataE = 0
 -- 基础命令ID
-DataF = "coupletarget"
+DataF = "creepanimatedead"
 -- 效果 - 目标点
 EffectArt = ""
 -- 热键 - 普通
 Hotkey = "D"
 -- 名字
-Name = "|cff99cc00天古木精|r"
+Name = "|cffcffc60幻化残卷|r"
 -- 命令串 - 使用/打开
-Order = "coupletarget"
+Order = "creepanimatedead"
 -- 施法距离
 Rng = 0.0000
 -- 效果 - 目标
@@ -26434,9 +26434,266 @@ TargetArt = ""
 -- 效果 - 目标附加点1
 Targetattach = ""
 -- 提示工具 - 普通
-Tip = "|cff99cc00天古木精|r(|cffffcc00D|r)"
+Tip = "|cffcffc60幻化残卷|r(|cffffcc00D|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cff999999火水|cffffff00木|cff999999风|r|cff00ccff|n|r|n召唤2个木精为你战斗，木精拥有与英雄一致的攻击防御力生命，拥有分裂与魔法免疫技能，持续180秒，冷却30s。|n|n|cff00ccff多重施法能叠加数值与持续时间。|r"
+Ubertip = "|cff999999火水木|cffffff00风|r|n|r|n
+召唤出一道能缓慢移动的龙卷风，龙卷风能对周围300范围敌人造成每秒|cffff9900（力量+敏捷+智力X2）X（等级的平方根）X 30%|r伤害，龙卷风持续15秒，冷却45秒。|n|n|cff00ccff多重施法只影响召唤的龙卷风数量。|r"
+-- 英雄技能
+hero = 0
+-- 等级
+levels = 1
+-- 种族
+race = "nightelf"
+
+[AHHA]
+_parent = "ANcl"
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTN3M3.blp"
+-- 按钮位置 - 普通 (X)
+"Buttonpos:1" = 1
+-- 按钮位置 - 普通 (Y)
+"Buttonpos:2" = 1
+-- 效果 - 施法者
+CasterArt = ""
+-- 魔法施放时间间隔
+Cool = 25.0000
+-- 魔法消耗
+Cost = 150
+-- 施法持续时间
+DataA = 0.0000
+-- 选项
+DataC = 1
+-- 动作持续时间
+DataD = 0.0000
+-- 使其他技能无效
+DataE = 0
+-- 基础命令ID
+DataF = "creepheal"
+-- 效果 - 目标点
+EffectArt = ""
+-- 热键 - 普通
+Hotkey = "D"
+-- 名字
+Name = "|cffffff00冰火双绝|r"
+-- 命令串 - 使用/打开
+Order = "creepheal"
+-- 施法距离
+Rng = 0.0000
+-- 效果 - 目标
+TargetArt = ""
+-- 效果 - 目标附加点1
+Targetattach = ""
+-- 提示工具 - 普通
+Tip = "|cffffff00冰火双绝|r(|cffffcc00D|r)"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "|cffffff00火水|cff999999木风|r|n|r|n
+在自身周围900范围中持续随机地点召唤持续3秒的3阵暴雪与陨石，每阵暴雪或陨石能造成|cffff9900（力量+敏捷+智力X2）X（等级的平方根）X 60%|r的伤害，冷却25秒。|n|n|cff00ccff多重施法影响每秒阵数。|r"
+-- 英雄技能
+hero = 0
+-- 等级
+levels = 1
+-- 种族
+race = "nightelf"
+
+[AHHB]
+_parent = "ANcl"
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNBlink.blp"
+-- 按钮位置 - 普通 (X)
+"Buttonpos:1" = 1
+-- 按钮位置 - 普通 (Y)
+"Buttonpos:2" = 1
+-- 效果 - 施法者
+CasterArt = ""
+-- 魔法施放时间间隔
+Cool = 1.0000
+-- 魔法消耗
+Cost = 100
+-- 施法持续时间
+DataA = 0.0000
+-- 目标类型
+DataB = 2
+-- 选项
+DataC = 1
+-- 动作持续时间
+DataD = 0.0000
+-- 使其他技能无效
+DataE = 0
+-- 基础命令ID
+DataF = "darkconversion"
+-- 效果 - 目标点
+EffectArt = ""
+-- 热键 - 普通
+Hotkey = "D"
+-- 名字
+Name = "|cffec7845万象归影|r"
+-- 命令串 - 使用/打开
+Order = "darkconversion"
+-- 施法距离
+Rng = 99999.0000
+-- 效果 - 目标
+TargetArt = ""
+-- 效果 - 目标附加点1
+Targetattach = ""
+-- 提示工具 - 普通
+Tip = "|cffec7845万象归影|r(|cffffcc00D|r)"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "|cffffff00火|cff999999水|cffffff00木|cff999999风|r|cff00ccff|n|n|r点击使用能立即闪烁到达目标地点并对目标地点的150范围的所有敌人造成|cffff9900（力量+敏捷+智力X2）X（等级的平方根）X 80%|r的伤害,施法距离整个地图，冷却1秒。|cff00ccff|n|n多重施法能提高伤害范围150/每重。|r"
+-- 英雄技能
+hero = 0
+-- 等级
+levels = 1
+-- 种族
+race = "nightelf"
+
+[AHHC]
+_parent = "ANcl"
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNFireBolt.blp"
+-- 按钮位置 - 普通 (X)
+"Buttonpos:1" = 1
+-- 按钮位置 - 普通 (Y)
+"Buttonpos:2" = 1
+-- 效果 - 施法者
+CasterArt = ""
+-- 魔法施放时间间隔
+Cool = 20.0000
+-- 魔法消耗
+Cost = 100
+-- 施法持续时间
+DataA = 0.0000
+-- 目标类型
+DataB = 2
+-- 选项
+DataC = 1
+-- 动作持续时间
+DataD = 0.0000
+-- 使其他技能无效
+DataE = 0
+-- 基础命令ID
+DataF = "darkportal"
+-- 效果 - 目标点
+EffectArt = ""
+-- 热键 - 普通
+Hotkey = "D"
+-- 名字
+Name = "|cff00ffff火轮烁日|r"
+-- 命令串 - 使用/打开
+Order = "darkportal"
+-- 施法距离
+Rng = 2000.0000
+-- 效果 - 目标
+TargetArt = ""
+-- 效果 - 目标附加点1
+Targetattach = ""
+-- 提示工具 - 普通
+Tip = "|cff00ffff火轮烁日|r(|cffffcc00D|r)"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "|cffffff00火|cff999999水木|cffffff00风|r|cff00ccff|n|n|r对前面发射一个向前冲击的火球，对冲击到的敌人造成|cffff9900（力量+敏捷+智力X2）X（等级的平方根）|r伤害，穿透1400距离，300半径范围，冷却20秒。|cff00ccff|n|n多重施法间隔0.5s.|r"
+-- 英雄技能
+hero = 0
+-- 等级
+levels = 1
+-- 种族
+race = "nightelf"
+
+
+[AHHE]
+_parent = "ANcl"
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNFountainOfLife.blp"
+-- 按钮位置 - 普通 (X)
+"Buttonpos:1" = 1
+-- 按钮位置 - 普通 (Y)
+"Buttonpos:2" = 1
+-- 效果 - 施法者
+CasterArt = ""
+-- 魔法施放时间间隔
+Cool = 75.0000
+-- 魔法消耗
+Cost = 300
+-- 施法持续时间
+DataA = 0.0000
+-- 目标类型
+DataB = 2
+-- 选项
+DataC = 1
+-- 动作持续时间
+DataD = 0.0000
+-- 使其他技能无效
+DataE = 0
+-- 基础命令ID
+DataF = "darksummoning"
+-- 效果 - 目标点
+EffectArt = ""
+-- 热键 - 普通
+Hotkey = "D"
+-- 名字
+Name = "|cff80ff80幻冥天泉|r"
+-- 命令串 - 使用/打开
+Order = "darksummoning"
+-- 施法距离
+Rng = 2000.0000
+-- 效果 - 目标
+TargetArt = ""
+-- 效果 - 目标附加点1
+Targetattach = ""
+-- 提示工具 - 普通
+Tip = "|cff80ff80幻冥天泉|r(|cffffcc00D|r)"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "|cff999999火|cffffff00水|cff999999木|cffffff00风|r|cff00ccff|n|n|r召唤一个能滋润友军的泉水，能每秒恢复周围600范围的所有友军30%生命与20点魔法值，持续15秒，冷却75秒。|cff00ccff|n|n多重施法能叠加持续时间。|r"
+-- 英雄技能
+hero = 0
+-- 等级
+levels = 1
+-- 种族
+race = "nightelf"
+
+
+[AHHG]
+_parent = "ANcl"
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNTreeOfEternity.blp"
+-- 按钮位置 - 普通 (X)
+"Buttonpos:1" = 1
+-- 按钮位置 - 普通 (Y)
+"Buttonpos:2" = 1
+-- 效果 - 施法者
+CasterArt = ""
+-- 魔法施放时间间隔
+Cool = 1800.0000
+-- 魔法消耗
+Cost = 1500
+-- 施法持续时间
+DataA = 0.0000
+-- 目标类型
+DataB = 2
+-- 选项
+DataC = 1
+-- 动作持续时间
+DataD = 0.0000
+-- 使其他技能无效
+DataE = 0
+-- 基础命令ID
+DataF = "darksummoning"
+-- 效果 - 目标点
+EffectArt = ""
+-- 热键 - 普通
+Hotkey = "D"
+-- 名字
+Name = "|cff80ff80幻冥天泉|r"
+-- 命令串 - 使用/打开
+Order = "darksummoning"
+-- 施法距离
+Rng = 2000.0000
+-- 效果 - 目标
+TargetArt = ""
+-- 效果 - 目标附加点1
+Targetattach = ""
+-- 提示工具 - 普通
+Tip = "|cff80ff80幻冥天泉|r(|cffffcc00D|r)"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "|cff999999火|cffffff00水|cff999999木|cffffff00风|r|cff00ccff|n|n|r召唤一个能滋润友军的泉水，能每秒恢复周围600范围的所有友军30%生命与20点魔法值，持续15秒，冷却75秒。|cff00ccff|n|n多重施法能叠加持续时间。|r"
 -- 英雄技能
 hero = 0
 -- 等级
