--- a/轮回2.69/war3map.w3u.ini
+++ b/轮回2.69/war3map.w3u.ini
@@ -15497,6 +15497,164 @@ upgrades = ""
 -- 允许攻击模式
 weapsOn = 0
 
+[hhm1]
+_parent = "hpea"
+-- 可建造建筑
+Builds = ""
+-- 生命最大值
+HP = 1
+-- 名字
+Name = "伤害-阴阳1"
+-- 普通
+abilList = "Aloc,Avul"
+-- 碰撞体积
+collision = 0.0000
+-- 模型文件
+file = ""
+-- 占用人口
+fused = 0
+-- 魔法初始数量
+mana0 = 10000
+-- 魔法最大值
+manaN = 10000
+-- 视野范围(夜晚)
+nsight = 100
+-- 单位附加值
+points = 123
+-- 生命回复
+regenHP = 0.0000
+-- 视野范围(白天)
+sight = 100
+-- 基础速度
+spd = 0
+-- 单位类别
+type = ""
+-- 阴影图像(单位)
+unitShadow = ""
+-- 使用科技
+upgrades = ""
+-- 允许攻击模式
+weapsOn = 0
+
+
+[hhm2]
+_parent = "hpea"
+-- 可建造建筑
+Builds = ""
+-- 生命最大值
+HP = 1
+-- 名字
+Name = "伤害-阴阳2"
+-- 普通
+abilList = "Aloc,Avul"
+-- 碰撞体积
+collision = 0.0000
+-- 模型文件
+file = ""
+-- 占用人口
+fused = 0
+-- 魔法初始数量
+mana0 = 10000
+-- 魔法最大值
+manaN = 10000
+-- 视野范围(夜晚)
+nsight = 100
+-- 单位附加值
+points = 123
+-- 生命回复
+regenHP = 0.0000
+-- 视野范围(白天)
+sight = 100
+-- 基础速度
+spd = 0
+-- 单位类别
+type = ""
+-- 阴影图像(单位)
+unitShadow = ""
+-- 使用科技
+upgrades = ""
+-- 允许攻击模式
+weapsOn = 0
+
+
+[hhm3]
+_parent = "hpea"
+-- 可建造建筑
+Builds = ""
+-- 生命最大值
+HP = 1
+-- 名字
+Name = "伤害-阴阳3"
+-- 普通
+abilList = "Aloc,Avul"
+-- 碰撞体积
+collision = 0.0000
+-- 模型文件
+file = ""
+-- 占用人口
+fused = 0
+-- 魔法初始数量
+mana0 = 10000
+-- 魔法最大值
+manaN = 10000
+-- 视野范围(夜晚)
+nsight = 100
+-- 单位附加值
+points = 123
+-- 生命回复
+regenHP = 0.0000
+-- 视野范围(白天)
+sight = 100
+-- 基础速度
+spd = 0
+-- 单位类别
+type = ""
+-- 阴影图像(单位)
+unitShadow = ""
+-- 使用科技
+upgrades = ""
+-- 允许攻击模式
+weapsOn = 0
+
+[hhm4]
+_parent = "hpea"
+-- 可建造建筑
+Builds = ""
+-- 生命最大值
+HP = 1
+-- 名字
+Name = "伤害-玲珑"
+-- 普通
+abilList = "Aloc,Avul"
+-- 碰撞体积
+collision = 0.0000
+-- 模型文件
+file = ""
+-- 占用人口
+fused = 0
+-- 魔法初始数量
+mana0 = 10000
+-- 魔法最大值
+manaN = 10000
+-- 视野范围(夜晚)
+nsight = 100
+-- 单位附加值
+points = 123
+-- 生命回复
+regenHP = 0.0000
+-- 视野范围(白天)
+sight = 100
+-- 基础速度
+spd = 0
+-- 单位类别
+type = ""
+-- 阴影图像(单位)
+unitShadow = ""
+-- 使用科技
+upgrades = ""
+-- 允许攻击模式
+weapsOn = 0
+
 [h01D]
 _parent = "hpea"
 -- 可建造建筑
@@ -15819,6 +15977,146 @@ upgrades = ""
 -- 允许攻击模式
 weapsOn = 0
 
+
+[hhm6]
+_parent = "hpea"
+-- 可建造建筑
+Builds = ""
+-- 生命最大值
+HP = 100000000
+-- 名字
+Name = "玲珑阵-1"
+-- 特殊效果
+Specialart = ""
+-- 普通
+abilList = "Aloc,Avul"
+-- 可以逃跑
+canFlee = 0
+-- 运输尺寸
+cargoSize = 0
+-- 碰撞体积
+collision = 0.0000
+-- 死亡时间(秒)
+death = 2.0000
+-- 模型文件
+file = "war3mapImported\\ManaTapAura.mdl"
+-- 占用人口
+fused = 0
+-- 隐藏小地图显示
+hideOnMinimap = 1
+-- X轴最大旋转角度(弧度)
+maxPitch = 25.0000
+-- Y轴最大旋转角度(弧度)
+maxRoll = 25.0000
+-- 模型缩放
+modelScale = 5.0000
+-- 类型
+movetp = ""
+-- 视野范围(夜晚)
+nsight = 1800
+-- 单位附加值
+points = 0
+-- 生命回复
+regenHP = 0.0000
+-- 选择缩放
+scale = 0.1000
+-- 阴影图像 - 高度
+shadowH = 0.0000
+-- 阴影图像 - 宽度
+shadowW = 0.0000
+-- 阴影图像 - X轴偏移
+shadowX = 0.0000
+-- 阴影图像 - Y轴偏移
+shadowY = 0.0000
+-- 视野范围(白天)
+sight = 1800
+-- 基础速度
+spd = 0
+-- 最大库存量
+stockMax = 0
+-- 雇佣时间间隔
+stockRegen = 0
+-- 单位类别
+type = "standon"
+-- 阴影图像(单位)
+unitShadow = ""
+-- 单位声音设置
+unitSound = ""
+-- 使用科技
+upgrades = ""
+-- 允许攻击模式
+weapsOn = 0
+
+[hhm7]
+_parent = "hpea"
+-- 可建造建筑
+Builds = ""
+-- 生命最大值
+HP = 100000000
+-- 名字
+Name = "玲珑阵-2"
+-- 特殊效果
+Specialart = ""
+-- 普通
+abilList = "Aloc,Avul"
+-- 可以逃跑
+canFlee = 0
+-- 运输尺寸
+cargoSize = 0
+-- 碰撞体积
+collision = 0.0000
+-- 死亡时间(秒)
+death = 2.0000
+-- 模型文件
+file = "war3mapImported\\ManaTapAura.mdl"
+-- 占用人口
+fused = 0
+-- 隐藏小地图显示
+hideOnMinimap = 1
+-- X轴最大旋转角度(弧度)
+maxPitch = 25.0000
+-- Y轴最大旋转角度(弧度)
+maxRoll = 25.0000
+-- 模型缩放
+modelScale = 5.0000
+-- 类型
+movetp = ""
+-- 视野范围(夜晚)
+nsight = 1800
+-- 单位附加值
+points = 0
+-- 生命回复
+regenHP = 0.0000
+-- 选择缩放
+scale = 0.1000
+-- 阴影图像 - 高度
+shadowH = 0.0000
+-- 阴影图像 - 宽度
+shadowW = 0.0000
+-- 阴影图像 - X轴偏移
+shadowX = 0.0000
+-- 阴影图像 - Y轴偏移
+shadowY = 0.0000
+-- 视野范围(白天)
+sight = 1800
+-- 基础速度
+spd = 0
+-- 最大库存量
+stockMax = 0
+-- 雇佣时间间隔
+stockRegen = 0
+-- 单位类别
+type = "standon"
+-- 阴影图像(单位)
+unitShadow = ""
+-- 单位声音设置
+unitSound = ""
+-- 使用科技
+upgrades = ""
+-- 允许攻击模式
+weapsOn = 0
+
+
 [hhh1]
 _parent = "hpea"
 -- 可建造建筑
@@ -15966,6 +16264,50 @@ _parent = "hpea"
 Builds = ""
 -- 名字 - 编辑器后缀
 EditorSuffix = "投射物-火轮烁日"
+-- 生命最大值
+HP = 1
+-- 名字
+Name = ""
+-- 普通
+abilList = "Aloc,Avul"
+-- 碰撞体积
+collision = 0.0000
+-- 模型文件
+file = "war3mapImported\\fireball.mdl"
+-- 占用人口
+fused = 0
+-- 模型缩放
+modelScale = 8.0000
+-- 高度
+moveHeight = 100.0000
+-- 类型
+movetp = "fly"
+-- 视野范围(夜晚)
+nsight = 100
+-- 单位附加值
+points = 123
+-- 生命回复
+regenHP = 0.0000
+-- 视野范围(白天)
+sight = 100
+-- 基础速度
+spd = 522
+-- 单位类别
+type = ""
+-- 阴影图像(单位)
+unitShadow = ""
+-- 使用科技
+upgrades = ""
+-- 允许攻击模式
+weapsOn = 0
+
+
+[hhm5]
+_parent = "hpea"
+-- 可建造建筑
+Builds = ""
+-- 名字 - 编辑器后缀
+EditorSuffix = "投射物-苍龙探幽"
 -- 生命最大值
 HP = 1
 -- 名字
