--- a/轮回2.86/war3map.w3a.ini
+++ b/轮回2.86/war3map.w3a.ini
@@ -25,6 +25,39 @@ Ubertip = "|cff98b4d0---“让沉睡的寒霜，来冰封整个大地。”|r|n|
 -- 目标允许
 targs = ""
 
+[ACam]
+_parent = "ACam"
+-- 图标 - 普通
+Art = "ReplaceableTextures\\CommandButtons\\BTNAvatarOn.blp"
+-- 按钮位置 - 普通 (X)
+"Buttonpos:1" = 2
+-- 按钮位置 - 普通 (Y)
+"Buttonpos:2" = 1
+-- 魔法施放时间间隔
+Cool = 60.0000
+-- 魔法消耗
+Cost = 100
+-- 持续时间 - 普通
+Dur = 0.0100
+-- 编辑器后缀
+EditorSuffix = ""
+-- 持续时间 - 英雄
+HeroDur = 0.0100
+-- 热键 - 普通
+Hotkey = "T"
+-- 名字
+Name = "空间免疫"
+-- 需求
+Requires = ""
+-- 施法距离
+Rng = 900.0000
+-- 提示工具 - 普通
+Tip = "空间免疫(|cffffcc00T|r)"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "在3秒内无敌目标友军,冷却60秒."
+-- 目标允许
+targs = "air,ground,friend,vuln,invu,self,organic,nonancient,neutral"
+
 [ACat]
 _parent = "ACat"
 -- 影响区域
@@ -2554,37 +2587,6 @@ Rng = 1800.0000
 -- 目标允许
 targs = "ground,enemy,air,neutral,organic"
 
-[ACr2]
-_parent = "ACr2"
--- 图标 - 普通
-Art = "ReplaceableTextures\\CommandButtons\\BTNAvatarOn.blp"
--- 魔法效果
-BuffID = ""
--- 按钮位置 - 普通 (X)
-"Buttonpos:1" = 2
--- 按钮位置 - 普通 (Y)
-"Buttonpos:2" = 1
--- 魔法消耗
-Cost = 100
--- 生命值恢复
-DataA = 0.0000
--- 持续时间 - 普通
-Dur = 0.0100
--- 编辑器后缀
-EditorSuffix = ""
--- 持续时间 - 英雄
-HeroDur = 0.0100
--- 热键 - 普通
-Hotkey = "T"
--- 名字
-Name = "空间免疫"
--- 施法距离
-Rng = 600.0000
--- 提示工具 - 普通
-Tip = "空间免疫(|cffffcc00T|r)"
--- 提示工具 - 普通 - 扩展
-Ubertip = "在3秒内无敌目标友军,冷却60秒."
-
 [ACrf]
 _parent = "ACrf"
 -- 影响区域
@@ -3592,7 +3594,7 @@ Area = 0.0000
 -- 魔法效果
 BuffID = ""
 -- 魔法施放时间间隔
-Cool = 30.0000
+Cool = 121.0000
 -- 魔法消耗
 Cost = 800
 -- 召唤单位数量
@@ -3616,13 +3618,13 @@ Researchhotkey = "R"
 -- 提示工具 - 学习
 Researchtip = "学习|cffff0000空间杀手|r(|cffffcc00R|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cffccff33瑟雨|r立即在每个虫洞上召唤出1个|cffff0000空间杀手|r对那里的敌人进行剿杀，具有|cffff9900敏捷X（等级的平方根）X5点|r攻击力，且攻击有25%几率释放具有33%杀伤力的|cffff6600曼陀罗之刺|r。持续|cffff9900（等级的平方根）x10|rs，每个虫洞最多只能存在1个杀手.|n|cff99ccff创造虫洞数量+1|r"
+Researchubertip = "|cffccff33瑟雨|r立即在每个虫洞上召唤出1个|cffff0000空间杀手|r对那里的敌人进行剿杀，具有|cffff9900敏捷X（等级的平方根）X5点|r攻击力，且攻击有25%几率释放具有33%杀伤力的|cffff6600曼陀罗之刺|r。持续|cffff9900120s|r，每个虫洞最多只能存在1个杀手.|n|cff99ccff创造虫洞数量+1|r"
 -- 效果 - 目标
 TargetArt = ""
 -- 提示工具 - 普通
 Tip = "|cffff0000空间杀手|r(|cffffcc00R|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffccff33瑟雨|r立即在每个虫洞上召唤出1个|cffff0000空间杀手|r对那里的敌人进行剿杀，具有|cffff9900敏捷X（等级的平方根）X5点|r攻击力，且攻击有25%几率释放具有33%杀伤力的|cffff6600曼陀罗之刺|r。持续|cffff9900（等级的平方根）x10|rs，每个虫洞最多只能存在1个杀手.|n|cff99ccff创造虫洞数量+1|r"
+Ubertip = "|cffccff33瑟雨|r立即在每个虫洞上召唤出1个|cffff0000空间杀手|r对那里的敌人进行剿杀，具有|cffff9900敏捷X（等级的平方根）X5点|r攻击力，且攻击有25%几率释放具有33%杀伤力的|cffff6600曼陀罗之刺|r。持续|cffff9900120s|r，每个虫洞最多只能存在1个杀手.|n|cff99ccff创造虫洞数量+1|r"
 -- 召唤单位类型
 UnitID = ""
 -- 等级要求
@@ -3763,11 +3765,11 @@ Researchhotkey = "E"
 -- 提示工具 - 学习
 Researchtip = "学习|cFF3333FF雷神寂灭|r(|cffffcc00E|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "湮灭在极其敏捷的身手下，也不失强大的攻击能力。|n|n|cffffff00效果1：|r|cffff9900在每次对敌人造成伤害的时候，若该伤害低于目标的2%的HP上限，对目标使用“|r|cff6699ff雷神光线|r|cffff9900”。（冷却8.5s）|n|r|cffff6699魔法值低于200时不会释放。|r|cffff9900|n|r|cffffff00效果2：|r|cffff9900在雷神唤影闪到目标的时候，对300范围的敌人造成（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X25%|r点伤害,伤害具有0.25s的冷却时间。|n|cffffff00光环效果3:|r全地图的玩家在杀怪时增加|cffffff00(英雄等级/100 + 2)点全属性|r."
+Researchubertip = "湮灭在极其敏捷的身手下，也不失强大的攻击能力。|n|n|cffffff00效果1：|r|cffff9900在每次对敌人造成伤害的时候，若该伤害低于目标的2%的HP上限，对目标使用“|r|cff6699ff雷神光线|r|cffff9900”。（冷却8.5s）|n|r|cffff6699魔法值低于200时不会释放。|r|cffff9900|n|r|cffffff00效果2：|r|cffff9900在雷神唤影闪到目标的时候，对300范围的敌人造成（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X25%|r点伤害,伤害具有0.25s的冷却时间。|n|cffffff00光环效果3:|r全地图的玩家在杀100个怪时增加|cffffff00(英雄等级 + 200)点全属性|r."
 -- 提示工具 - 普通
 Tip = "|cFF3333FF雷神寂灭|r"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "湮灭在极其敏捷的身手下，也不失强大的攻击能力。|n|n|cffffff00效果1：|r|cffff9900在每次对敌人造成伤害的时候，若该伤害低于目标的2%的HP上限，对目标使用“|r|cff6699ff雷神光线|r|cffff9900”。（冷却8.5s）|n|r|cffff6699魔法值低于200时不会释放。|r|cffff9900|n|r|cffffff00效果2：|r|cffff9900在雷神唤影闪到目标的时候，对300范围的敌人造成（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X25%|r点伤害,伤害具有0.25s的冷却时间。|n|cffffff00光环效果3:|r全地图的玩家在杀怪时增加|cffffff00(英雄等级/100 + 2)点全属性|r."
+Ubertip = "湮灭在极其敏捷的身手下，也不失强大的攻击能力。|n|n|cffffff00效果1：|r|cffff9900在每次对敌人造成伤害的时候，若该伤害低于目标的2%的HP上限，对目标使用“|r|cff6699ff雷神光线|r|cffff9900”。（冷却8.5s）|n|r|cffff6699魔法值低于200时不会释放。|r|cffff9900|n|r|cffffff00效果2：|r|cffff9900在雷神唤影闪到目标的时候，对300范围的敌人造成（力量+敏捷X1.8+智力X1.2）X（等级的平方根）X25%|r点伤害,伤害具有0.25s的冷却时间。|n|cffffff00光环效果3:|r全地图的玩家在杀100个怪时增加|cffffff00(英雄等级 + 200)点全属性|r."
 -- 等级
 levels = 1
 -- 等级要求
@@ -5440,6 +5442,8 @@ BuffID = "B00J"
 Cool = 15.0000
 -- 魔法消耗
 Cost = 1
+-- 最大目标中立生物等级
+DataA = 450
 -- 持续时间 - 普通
 Dur = 3.0000
 -- 持续时间 - 英雄
@@ -5457,13 +5461,13 @@ Researchhotkey = "W"
 -- 提示工具 - 学习
 Researchtip = "学习|cffff00ff炼血一击|r(|cffffcc00W|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cffff0000凯撒|r那强大的血统让敌人胆颤，并能以自身精血为力量，对敌人造成杀伤力。|n|n|cffffff00主动效果：|r立即令自身HP和MP变成1%，对目标造成|cffffff00（之前剩余HPx等级的平方根）x（之前剩余的MP/500)点混乱型伤害|r并把其变成一只小动物3s(英雄1s)。|n|cffff6800上限21亿伤害,达到后不会再增加.|r|n|n|cffffff00被动效果：|r每攻击满|cffffff0015次|r在自身周围释放一次具有|cffffff0033%伤害|r的|cff99ccff憾裂天地|r。|n|cffff6699魔法值低于250时不会释放。|r"
+Researchubertip = "|cffff0000凯撒|r那强大的血统让敌人胆颤，并能以自身精血为力量，对敌人造成杀伤力。|n|n|cffffff00主动效果：|r立即令自身HP和MP变成1%，对目标造成|cffffff00（之前剩余HPx等级的平方根）x（之前剩余的MP/500)点混乱型伤害|r并把其变成一只小动物3s(英雄1s)。|n|n|cffffff00被动效果：|r每攻击满|cffffff0015次|r在自身周围释放一次具有|cffffff0033%伤害|r的|cff99ccff憾裂天地|r。|n|cffff6699魔法值低于250时不会释放。|r"
 -- 施法距离
 Rng = 1800.0000
 -- 提示工具 - 普通
 Tip = "|cffff00ff炼血一击|r(|cffffcc00W|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffff0000凯撒|r那强大的血统让敌人胆颤，并能以自身精血为力量，对敌人造成杀伤力。|n|n|cffffff00主动效果：|r立即令自身HP和MP变成1%，对目标造成|cffffff00（之前剩余HPx等级的平方根）x（之前剩余的MP/500)点混乱型伤害|r并把其变成一只小动物3s(英雄1s)。|n|cffff6800上限21亿伤害,达到后不会再增加.|r|n|n|cffffff00被动效果：|r每攻击满|cffffff0015次|r在自身周围释放一次具有|cffffff0033%伤害|r的|cff99ccff憾裂天地|r。|n|cffff6699魔法值低于250时不会释放。|r"
+Ubertip = "|cffff0000凯撒|r那强大的血统让敌人胆颤，并能以自身精血为力量，对敌人造成杀伤力。|n|n|cffffff00主动效果：|r立即令自身HP和MP变成1%，对目标造成|cffffff00（之前剩余HPx等级的平方根）x（之前剩余的MP/500)点混乱型伤害|r并把其变成一只小动物3s(英雄1s)。|n|n|cffffff00被动效果：|r每攻击满|cffffff0015次|r在自身周围释放一次具有|cffffff0033%伤害|r的|cff99ccff憾裂天地|r。|n|cffff6699魔法值低于250时不会释放。|r"
 -- 等级
 levels = 1
 -- 等级要求
@@ -19340,13 +19344,13 @@ Researchhotkey = "E"
 -- 提示工具 - 学习
 Researchtip = "学习|cffffff00赦魂诀|r(|cffffcc00E|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cffff6800黑阎|r身上掌控天地之能，剑上已附日月之灵，与其化魂之祭，共定一世。|n|n|cffffff00效果1（光环效果）：|r增加自身和所有友军英雄的50%生命上限。|n|cffffff00效果2（主动）：|r在目标立即产生1个带有多重攻击的持续30s的高级祭品，他的攻击力是普通祭品的6倍，|cffff6800冷却60s.|r|n|cff3366ff祭品上限+1.|r"
+Researchubertip = "|cffff6800黑阎|r身上掌控天地之能，剑上已附日月之灵，与其化魂之祭，共定一世。|n|n|cffffff00效果1（光环效果）：|r增加自身和所有友军英雄的50%生命上限。|n|cffffff00效果2（主动）：|r在目标立即产生1个带有多重攻击的持续30s的高级祭品，他的攻击力是普通祭品的9.6倍，|cffff6800冷却60s.|r|n|cff3366ff祭品上限+1.|r"
 -- 施法距离
 Rng = 900.0000
 -- 提示工具 - 普通
 Tip = "|cffffff00赦魂诀|r(|cffffcc00E|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffff6800黑阎|r身上掌控天地之能，剑上已附日月之灵，与其化魂之祭，共定一世。|n|n|cffffff00效果1（光环效果）：|r增加自身和所有友军英雄的50%生命上限。|n|cffffff00效果2（主动）：|r在目标立即产生1个带有多重攻击的持续30s的高级祭品，他的攻击力是普通祭品的6倍，|cffff6800冷却60s.|r|n|cff3366ff祭品上限+1.|r"
+Ubertip = "|cffff6800黑阎|r身上掌控天地之能，剑上已附日月之灵，与其化魂之祭，共定一世。|n|n|cffffff00效果1（光环效果）：|r增加自身和所有友军英雄的50%生命上限。|n|cffffff00效果2（主动）：|r在目标立即产生1个带有多重攻击的持续30s的高级祭品，他的攻击力是普通祭品的9.6倍，|cffff6800冷却60s.|r|n|cff3366ff祭品上限+1.|r"
 -- 等级
 levels = 1
 -- 种族
@@ -19875,11 +19879,11 @@ Researchhotkey = "R"
 -- 提示工具 - 学习
 Researchtip = "学习|cffff00ff泣罗刹|r(|cffffcc00R|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cffff6800黑阎|r吞噬着大量祭品之魂，其魂也附于其中。遇敌之后，刹那瞬间，万千圣魂会侵蚀敌人，让其也化为这祭品中的一份。|n|n|cffffff00效果1：|r当自身受到必死伤害时，若自己存在有祭品，会杀死该祭品来免疫这次伤害，并|cffffff00无敌1s,回复100%生命|r,冷却5s.|n|cffffff00效果2：|r当祭品死亡时，会对600范围的随机一个敌人造成|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X60%|r的伤害。|n|cffff99cc魔法值低于600时以上技能无效。|r|n|cffffff00效果3（主动效果）：|r在后面60秒内,每次产生祭品时,额外产生2个,技能冷却140s。|n|cff3366ff祭品上限+1|n.|r"
+Researchubertip = "|cffff6800黑阎|r吞噬着大量祭品之魂，其魂也附于其中。遇敌之后，刹那瞬间，万千圣魂会侵蚀敌人，让其也化为这祭品中的一份。|n|n|cffffff00效果1：|r当自身受到必死伤害时，若自己存在有祭品，会杀死该祭品来免疫这次伤害，并|cffffff00无敌1s,回复100%生命|r,冷却4s.|n|cffffff00效果2：|r当祭品死亡时，会对600范围的随机一个敌人造成|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X60%|r的伤害。|n|cffff99cc魔法值低于600时以上技能无效。|r|n|cffffff00效果3（主动效果）：|r在后面60秒内,每次产生祭品时,额外产生2个,技能冷却140s。|n|cff3366ff祭品上限+1|n.|r"
 -- 提示工具 - 普通
 Tip = "|cffff00ff泣罗刹|r(|cffffcc00R|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cffff6800黑阎|r吞噬着大量祭品之魂，其魂也附于其中。遇敌之后，刹那瞬间，万千圣魂会侵蚀敌人，让其也化为这祭品中的一份。|n|n|cffffff00效果1：|r当自身受到必死伤害时，若自己存在有祭品，会杀死该祭品来免疫这次伤害，并|cffffff00无敌1s,回复100%生命|r,冷却5s.|n|cffffff00效果2：|r当祭品死亡时，会对600范围的随机一个敌人造成|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X60%|r的伤害。|n|cffff99cc魔法值低于600时以上技能无效。|r|n|cffffff00效果3（主动效果）：|r在后面60秒内,每次产生祭品时,额外产生2个,技能冷却140s。|n|cff3366ff祭品上限+1|n.|r"
+Ubertip = "|cffff6800黑阎|r吞噬着大量祭品之魂，其魂也附于其中。遇敌之后，刹那瞬间，万千圣魂会侵蚀敌人，让其也化为这祭品中的一份。|n|n|cffffff00效果1：|r当自身受到必死伤害时，若自己存在有祭品，会杀死该祭品来免疫这次伤害，并|cffffff00无敌1s,回复100%生命|r,冷却4s.|n|cffffff00效果2：|r当祭品死亡时，会对600范围的随机一个敌人造成|cffff9900（力量X1.8+敏捷+智力X1.2）X（等级的平方根）X60%|r的伤害。|n|cffff99cc魔法值低于600时以上技能无效。|r|n|cffffff00效果3（主动效果）：|r在后面60秒内,每次产生祭品时,额外产生2个,技能冷却140s。|n|cff3366ff祭品上限+1|n.|r"
 -- 种族
 race = "human"
 -- 等级要求
@@ -26936,8 +26940,6 @@ DataC = {
 }
 -- 编辑器后缀
 EditorSuffix = "(贯天照世枪)"
--- 效果 - 投射物图像
-Missileart = "war3mapImported\\hahahqiang.mdx"
 -- 英雄技能
 hero = 0
 -- 等级
@@ -28093,7 +28095,7 @@ Researchhotkey = "E"
 -- 提示工具 - 学习
 Researchtip = "学习|cff339966木|r(|cffffcc00E|r)"
 -- 提示工具 - 学习 - 扩展
-Researchubertip = "|cff00ccff幻逸|r精通四相元素之力，第三相便是森然的|cff339966万木之丛|r，以天为苣，万物便得以辉煌！|n|n|cffffff00被动效果：|r当你的魔能等级|cffffff00大于1级|r时，能在每次施放元素融合而成的法术时，再重复施放|cffffff00（魔能等级/2）|r次该法术，多重施法不会让你消耗更多的魔法，|cff00ccff每次多重施法最多只能额外重复施放4次。(万劫难度最多2次)|r|n|n|cffffff00点击切换元素之力--|r|cff339966木|r|cffffff00的激活状态，四相元素之力激活与否将组合成不一样的天赋技能效果。|r"
+Researchubertip = "|cff00ccff幻逸|r精通四相元素之力，第三相便是森然的|cff339966万木之丛|r，以天为苣，万物便得以辉煌！|n|n|cffffff00被动效果：|r当你的魔能等级|cffffff00大于1级|r时，能在每次施放元素融合而成的法术时，再重复施放|cffffff00（魔能等级/2）|r次该法术，多重施法不会让你消耗更多的魔法，|cff00ccff每次多重施法最多只能额外重复施放4次。(万劫难度最多3次)|r|n|n|cffffff00点击切换元素之力--|r|cff339966木|r|cffffff00的激活状态，四相元素之力激活与否将组合成不一样的天赋技能效果。|r"
 -- 施法距离
 Rng = 0.0000
 -- 效果 - 目标
@@ -28103,7 +28105,7 @@ Targetattach = ""
 -- 提示工具 - 普通
 Tip = "|cff339966木|r(|cffffcc00E|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "|cff00ccff幻逸|r精通四相元素之力，第三相便是森然的|cff339966万木之丛|r，以天为苣，万物便得以辉煌！|n|n|cffffff00被动效果：|r当你的魔能等级|cffffff00大于1级|r时，能在每次施放元素融合而成的法术时，再重复施放|cffffff00（魔能等级/2）|r次该法术，多重施法不会让你消耗更多的魔法，|cff00ccff每次多重施法最多只能额外重复施放4次。(万劫难度最多2次)|r|n|n|cffffff00点击切换元素之力--|r|cff339966木|r|cffffff00的激活状态，四相元素之力激活与否将组合成不一样的天赋技能效果。|r"
+Ubertip = "|cff00ccff幻逸|r精通四相元素之力，第三相便是森然的|cff339966万木之丛|r，以天为苣，万物便得以辉煌！|n|n|cffffff00被动效果：|r当你的魔能等级|cffffff00大于1级|r时，能在每次施放元素融合而成的法术时，再重复施放|cffffff00（魔能等级/2）|r次该法术，多重施法不会让你消耗更多的魔法，|cff00ccff每次多重施法最多只能额外重复施放4次。(万劫难度最多3次)|r|n|n|cffffff00点击切换元素之力--|r|cff339966木|r|cffffff00的激活状态，四相元素之力激活与否将组合成不一样的天赋技能效果。|r"
 -- 等级
 levels = 1
 -- 种族
