--- a/轮回2.86/war3map.w3t.ini
+++ b/轮回2.86/war3map.w3t.ini
@@ -10697,6 +10697,39 @@ goldcost = 1
 -- 购买时间间隔
 stockRegen = 10
 
+[I048]
+_parent = "fgrd"
+-- 界面图标
+Art = "ReplaceableTextures\\CommandButtons\\BTNl17.blp"
+-- 说明
+Description = "|cff00ccff每层需要同时点亮相对应层数的灯,而此时怪物会同时进攻秘境,你需要在限定的时间内保护所有灯使其成功点亮,或者直接消灭所有进攻的怪物,则奖励|r|cffffff00全体玩家|r|cff00ccff相对应的灯!|r|cffffff00(灯能觉醒英雄的天赋技能)|r|cff00ccff|n|r|cffbd5f00|n|r|cff3366ff注意:当前在线的玩家越多,秘境随机出现的怪物范围越大,灯的位置也会越分散,请尽量|r|cffffff00团队一起进来作战!|n|r|n第11层开始每点亮一次需要花费1000木头.|n|cffff00ff需要逐层挑战,越到后面难度越大.|r|n"
+-- 热键
+Hotkey = ""
+-- 名字
+Name = "|cffffff00点亮明灯|r"
+-- 提示工具 - 基础
+Tip = "|cffffff00点亮明灯|r"
+-- 提示工具 - 扩展
+Ubertip = "|cff00ccff每层需要同时点亮相对应层数的灯,而此时怪物会同时进攻秘境,你需要在限定的时间内保护所有灯使其成功点亮,或者直接消灭所有进攻的怪物,则奖励|r|cffffff00全体玩家|r|cff00ccff相对应的灯!|r|cffffff00(灯能觉醒英雄的天赋技能)|r|cff00ccff|n|r|cffbd5f00|n|r|cff3366ff注意:当前在线的玩家越多,秘境随机出现的怪物范围越大,灯的位置也会越分散,请尽量|r|cffffff00团队一起进来作战!|n|r|n第11层开始每点亮一次需要花费1000木头.|n|cffff00ff需要逐层挑战,越到后面难度越大.|r|n"
+-- 技能
+abilList = ""
+-- 物品分类
+class = "PowerUp"
+-- CD间隔组
+cooldownID = ""
+-- 使用模型
+file = "Objects\\InventoryItems\\tomeGreen\\tomeGreen.mdl"
+-- 黄金消耗
+goldcost = 1
+-- 可作为随机物品
+pickRandom = 0
+-- 捡取时自动使用
+powerup = 1
+-- 可被市场出售
+sellable = 0
+-- 购买时间间隔
+stockRegen = 1
+
 [I049]
 _parent = "stel"
 -- 界面图标
