--- a/轮回2.86/war3map.w3u.ini
+++ b/轮回2.86/war3map.w3u.ini
@@ -4656,6 +4656,8 @@ mana0 = 2000
 manaN = 2000
 -- 单位附加值
 points = 1
+-- 攻击 1 - 攻击范围
+rangeN1 = 1600
 -- 魔法回复
 regenMana = 50.0000
 -- 攻击 1 - 伤害骰子面数
@@ -4699,6 +4701,8 @@ mana0 = 2000
 manaN = 2000
 -- 单位附加值
 points = 1
+-- 攻击 1 - 攻击范围
+rangeN1 = 1600
 -- 魔法回复
 regenMana = 50.0000
 -- 攻击 1 - 伤害骰子面数
@@ -4744,6 +4748,8 @@ mana0 = 2000
 manaN = 2000
 -- 单位附加值
 points = 1
+-- 攻击 1 - 攻击范围
+rangeN1 = 1600
 -- 生命回复
 regenHP = 0.0000
 -- 魔法回复
@@ -5306,7 +5312,7 @@ HP = 1000000
 -- 名字
 Name = "|cff99ccff空间虫洞|r"
 -- 普通
-abilList = "Avul,Arpl,Arpm,ACfu,A0CM,A0E6,ACr2,A0G1"
+abilList = "Avul,Arpl,Arpm,ACfu,A0CM,A0E6,ACam,A0G1"
 -- 默认主动技能
 auto = "Arpl"
 -- 阴影图像(建筑)
@@ -6450,7 +6456,7 @@ manaN = 2000
 -- 单位附加值
 points = 1
 -- 攻击 1 - 攻击范围
-rangeN1 = 600
+rangeN1 = 1600
 -- 魔法回复
 regenMana = 50.0000
 -- 攻击 1 - 伤害骰子面数
@@ -7269,7 +7275,7 @@ points = 1
 -- 种族
 race = "naga"
 -- 攻击 1 - 攻击范围
-rangeN1 = 600
+rangeN1 = 1600
 -- 生命回复
 regenHP = 0.0000
 -- 魔法回复
@@ -7547,7 +7553,7 @@ manaN = 800
 -- 单位附加值
 points = 1
 -- 攻击 1 - 攻击范围
-rangeN1 = 600
+rangeN1 = 1600
 -- 生命回复
 regenHP = 0.0000
 -- 魔法回复
@@ -7690,7 +7696,7 @@ manaN = 800
 -- 单位附加值
 points = 1
 -- 攻击 1 - 攻击范围
-rangeN1 = 600
+rangeN1 = 1600
 -- 生命回复
 regenHP = 0.0000
 -- 魔法回复
@@ -7747,7 +7753,7 @@ manaN = 2000
 -- 单位附加值
 points = 1
 -- 攻击 1 - 攻击范围
-rangeN1 = 900
+rangeN1 = 1600
 -- 魔法回复
 regenMana = 20.0000
 -- 攻击 1 - 伤害骰子面数
@@ -7797,6 +7803,8 @@ level = 100
 manaN = 900
 -- 单位附加值
 points = 1
+-- 攻击 1 - 攻击范围
+rangeN1 = 1600
 -- 生命回复
 regenHP = 0.0000
 -- 魔法回复
@@ -7891,6 +7899,35 @@ sides1 = 1000000
 targs1 = "ground,ward,structure,debris,item,air"
 -- 使用科技
 upgrades = "R00H"
+
+[nogr]
+_parent = "nogr"
+-- 生命最大值
+HP = 2000000
+-- 普通
+abilList = "A044"
+-- 攻击 1 - 攻击间隔
+cool1 = 0.5000
+-- 基础护甲
+def = 50.0000
+-- 攻击 1 - 基础伤害
+dmgplus1 = 15000
+-- 占用人口
+fused = 0
+-- 等级
+level = 25
+-- 魔法初始数量
+mana0 = 200
+-- 魔法最大值
+manaN = 200
+-- 单位附加值
+points = 20
+-- 魔法回复
+regenMana = 5.0000
+-- 基础速度
+spd = 522
+-- 攻击 1 - 目标允许
+targs1 = "debris,ground,structure,air,ward,item"
 
 [nowb]
 _parent = "nowb"
@@ -8154,7 +8191,7 @@ points = 1
 -- 种族
 race = "naga"
 -- 攻击 1 - 攻击范围
-rangeN1 = 500
+rangeN1 = 1600
 -- 魔法回复
 regenMana = 60.0000
 -- 攻击 1 - 伤害骰子面数
@@ -8783,7 +8820,7 @@ manaN = 1000
 -- 单位附加值
 points = 1
 -- 攻击 1 - 攻击范围
-rangeN1 = 600
+rangeN1 = 1600
 -- 生命回复
 regenHP = 0.0000
 -- 魔法回复
@@ -9477,7 +9514,7 @@ points = 1
 -- 种族
 race = "naga"
 -- 攻击 1 - 攻击范围
-rangeN1 = 600
+rangeN1 = 1600
 -- 生命回复
 regenHP = 0.0000
 -- 魔法回复
@@ -15376,7 +15413,7 @@ collision = 0.0000
 -- 死亡时间(秒)
 death = 2.0000
 -- 模型文件
-file = "war3mapImported\\s_runningflameaura.mdl"
+file = "Abilities\\Spells\\NightElf\\TrueshotAura\\TrueshotAura.mdl"
 -- 占用人口
 fused = 0
 -- 隐藏小地图显示
@@ -15445,7 +15482,7 @@ collision = 0.0000
 -- 死亡时间(秒)
 death = 2.0000
 -- 模型文件
-file = "war3mapImported\\s_runningflameaura.mdl"
+file = "Abilities\\Spells\\NightElf\\TrueshotAura\\TrueshotAura.mdl"
 -- 占用人口
 fused = 0
 -- 隐藏小地图显示
@@ -17793,7 +17830,7 @@ HP = 1
 -- 名字
 Name = "|cFFFF66CCBOSS挑战|r"
 -- 售出物品
-Sellitems = "I04N,I05E,I05H,I054,I01B,fgrd,I04H,rspd"
+Sellitems = "I04N,I05E,I05H,I054,I01B,fgrd,I04H,I02T,rspd"
 -- 阴影图像(建筑)
 buildingShadow = ""
 -- 碰撞体积
@@ -18210,7 +18247,7 @@ HP = 1
 -- 名字
 Name = "|cff00ccff秘境之灵 - |r|cffff00ff逝|r|cffff55aa丶|r|cffffaa55无|r|cffffff00心|r"
 -- 售出物品
-Sellitems = "I02T"
+Sellitems = "I048"
 -- 售出单位
 Sellunits = ""
 -- 普通
@@ -18237,6 +18274,35 @@ uberSplat = ""
 unitShadow = "Shadow"
 -- 单位声音设置
 unitSound = "ArcaneVault"
+
+[n01H]
+_parent = "ngme"
+-- 生命最大值
+HP = 20
+-- 名字
+Name = "|cffffff00秘境宝灯|r"
+-- 售出物品
+Sellitems = ""
+-- 提示工具 - 基础
+Tip = "|cffffff00秘境宝灯|r"
+-- 普通
+abilList = ""
+-- 阴影图像(建筑)
+buildingShadow = ""
+-- 碰撞体积
+collision = 0.0000
+-- 模型文件
+file = "Doodads\\Cityscape\\Props\\CrystalLamp\\CrystalLamp.mdl"
+-- 模型缩放
+modelScale = 2.0000
+-- 路径纹理
+pathTex = ""
+-- 选择缩放
+scale = 2.0000
+-- 建筑地面纹理
+uberSplat = ""
+-- 单位声音设置
+unitSound = "Peasant"
 
 [u000]
 _parent = "uloc"
