t push haoduo dongxi

--- a/edit/testfile/war3map.w3a.ini
+++ b/edit/testfile/war3map.w3a.ini
@@ -3,6 +3,32 @@ _parent = "AItx"
 -- 攻击奖励
 DataA = -20
 
+[AOsh]
+_parent = "AOsh"
+-- 魔法施放时间间隔
+Cool = 0.0000
+-- 魔法消耗
+Cost = 0
+-- 伤害
+DataA = 0.0000
+-- 最大伤害
+DataB = 0.0000
+-- 距离
+DataC = 0.0000
+-- 最终区域范围
+DataD = 0.0000
+-- 施法距离
+Rng = 99999.0000
+-- 英雄技能
+hero = 0
+-- 等级
+levels = 1
+
+[Ahea]
+_parent = "Ahea"
+-- 目标允许
+targs = "ground,nonancient,vulnerable,air,invulnerable,hero,friend,organic,neutral,self"
+
 [Aroc]
 _parent = "Aroc"
 -- 影响区域
@@ -215,3 +241,18 @@ Targetattach3 = "foot,left"
 Targetattach4 = "foot,right"
 -- 效果 - 目标 - 附加数量
 Targetattachcount = 5
+
+[A009]
+_parent = "AIrc"
+-- 名字
+Name = "123"
+-- 提示工具 - 普通
+Tip = "123"
+-- 提示工具 - 普通 - 扩展
+Ubertip = "123"
+-- 提示工具 -关闭
+Untip = "123"
+-- 物品技能
+item = 0
+-- 种族
+race = "orc"
