--- a/edit/testfile/war3map.w3u.ini
+++ b/edit/testfile/war3map.w3u.ini
@@ -1,15 +1,16 @@
+[Hblm]
+_parent = "Hblm"
+-- 普通
+abilList = "AOsh"
+
 [Otch]
 _parent = "Otch"
 -- 生命最大值
 HP = 2000
 -- 普通
-abilList = "A000,AInv"
--- 模型文件
-file = "Abilities\\Weapons\\SentinelMissile\\SentinelMissile.mdl"
+abilList = "A009"
 -- 英雄
 heroAbilList = ""
--- 模型缩放
-modelScale = 2.0000
 -- 类型
 movetp = "fly"
 -- 生命回复
@@ -28,20 +29,12 @@ dmgplus1 = 0
 
 [hpea]
 _parent = "hpea"
--- 模型文件
-file = "Abilities\\Spells\\NightElf\\TrueshotAura\\TrueshotAura.mdl"
--- 模型缩放
-modelScale = 4.0000
 -- 最小高度
 moveFloor = 20.0000
 -- 高度
 moveHeight = 20.0000
 -- 类型
 movetp = "fly"
--- 颜色值(红)
-red = 0
--- 基础速度
-spd = 0
 
 [hphx]
 _parent = "hphx"
@@ -74,10 +67,28 @@ targCount1 = 0
 -- 攻击 1 - 武器类型
 weapTp1 = "missile"
 
+[hsor]
+_parent = "hsor"
+-- 模型文件
+file = "war3mapImported\\MeteorStrike.mdl"
+
 [nbdo]
 _parent = "nbdo"
 -- 普通
 abilList = "A002"
+
+[ngnb]
+_parent = "ngnb"
+-- 建造时间
+bldtm = 0
+-- 占用人口
+fused = 0
+-- 黄金消耗
+goldcost = 0
+-- 木材消耗
+lumbercost = 0
+-- 雇佣开始时间
+stockStart = 0
 
 [nmdr]
 _parent = "nmdr"
@@ -129,6 +140,8 @@ red = 0
 _parent = "nsgb"
 -- 普通
 abilList = "A007"
+-- 模型文件
+file = "Abilities\\Weapons\\ZigguratMissile\\ZigguratMissile.mdl"
 -- 颜色值(绿)
 green = 0
 -- 颜色值(红)
@@ -153,6 +166,8 @@ _parent = "opeo"
 HP = 10000
 -- 基础护甲
 def = 1000.0000
+-- 生命回复
+regenHP = 0.0000
 
 [owyv]
 _parent = "owyv"
