--- a/轮回/war3map.imp.ini
+++ b/轮回/war3map.imp.ini
@@ -642,6 +642,7 @@ import = {
 "units\\human\\thecaptain\\dk slash.blp",
 "units\\human\\thecaptain\\dragon_knight.blp",
 "units\\human\\thecaptain\\knight_color.blp",
+"war3map.txt.ini",
 "war3mapimported\\archangel female.mdx",
 "war3mapimported\\archangel female_portrait.mdx",
 "war3mapimported\\artillery.mdx",
