完成了仓库->英雄的转移

--- a/OriginMap/table/ability.ini
+++ b/OriginMap/table/ability.ini
@@ -30542,7 +30542,7 @@ Targetattach = ""
 -- 提示工具 - 普通
 Tip = "取走英雄物品(|cffffcc00W|r)"
 -- 提示工具 - 普通 - 扩展
-Ubertip = "将英雄身上一件物品转移到仓库."
+Ubertip = "将英雄身上一件物品转移到仓库.|n|cffff6600右键双击装备也能实现物品的转移.|r"
 -- 英雄技能
 hero = 0
 -- 等级
