--- a/OriginMap/table/w3i.ini
+++ b/OriginMap/table/w3i.ini
@@ -1,8 +1,8 @@
 [地图]
 文件版本 = 25
-地图版本 = 3237
+地图版本 = 3254
 编辑器版本 = 6052
-地图名称 = "轮回之狱 - v3.421正式版"
+地图名称 = "轮回之狱"
 作者名字 = "Crainax(旧名Laser)"
 地图描述 = [=[
 魔界滋生了六界之外的力量,而人神妖鬼仙界察觉了这种力量，而决定联手起来将魔界歼灭。寻找战友、提交BUG、寻找攻略请加官方地图QQ群148199145。
@@ -54,7 +54,7 @@
 
 [载入图]
 序号 = -1
-路径 = "war3mapImported\\LoadingScreen.mdx"
+路径 = "war3mapimported\\loadingscreen.mdx"
 文本 = ""
 标题 = ""
 子标题 = ""
